--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">sharedPreference</string>
+    <string name="home">home</string>
+    <string name="materi">materi</string>
+    <string name="profile">profile</string>
 </resources>
